--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,2 +1,139 @@
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
+.html{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+@media (max-width: 1024px) {
+
+    body #navbarSupportedContent {
+        margin-left: 5vw;
+    }
+    
+    
+  }
+  
+#icon {
+    margin-left: 5vw;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+.navbar{
+    font-weight: bold;
+}
+#navbarSupportedContent {
+    margin-left: 19vw;
+}
+#navbar-list{
+    gap: 2vw;
+}
+
+
+.header{
+    padding: 10vh;
+}
+.source-list{
+    padding-top: 5vh;
+    text-align: center;
+    font-size: 30px;
+}
+#link{
+    list-style-type: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: inline-block;
+    text-align: left;
+}
+
+#header-main {
+    font-size: 3rem;
+    z-index: 20;
+    position: absolute;
+    bottom: 60%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+#header-sub {
+    font-size: 2rem;
+    z-index: 20;
+    text-align: center;
+    color: white;
+    position: absolute;
+    bottom: 52%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
+}
+.carousel{
+    padding-top: -20px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.carousel-inner {
+    width: 100%;
+    height: 100%;
+    height: 95vh;
+    object-fit: cover;
+    .carousel-img{
+        width: 100%;
+        height: 100%;
+    }
+    .carousel-item {
+        width: 100%;
+        height: 100%;
+        filter: brightness(50%);
+    }
+
+}
+
+.btn{
+    z-index: 20;
+    position: absolute;
+    bottom: 40%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 2px;
+    border-radius: 1rem;
+    text-decoration: none;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.7);
+}
+
+
+@keyframes fadeInUp {
+    0% {
+        transform: translateY(150%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+.fadeInUp {
+    animation: 0.5s fadeInUp ease;
+}
+
+@keyframes fadeInDown {
+    0% {
+        transform: translateY(-50%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+.fadeInDown {
+    animation: 0.3s fadeInDown;
+}
